--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "package.json for new azure account",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js"
   },
   "author": "",
